feat(add cartnumber - add api for approved)

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=mysql-container
+DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=PASSWORD
+DB_PASSWORD=
 DB_NAME=TARAZ_FORM_BUILDER
 NODE_ENV=production
